--- a/src/style/PopularSearches.css
+++ b/src/style/PopularSearches.css
@@ -2,7 +2,6 @@
   width: 100%;
   padding: 20px;
   position: relative;
-  z-index: -1;
 }
 
 .popular-searches h2 {
@@ -29,6 +28,7 @@
   overflow-y: hidden;
   scroll-behavior: smooth;
   padding: 0 0 8px 4px;
+  z-index: -1;
 }
 
 .search-card {
@@ -59,7 +59,7 @@
   top: 50%;
   transform: translateY(-50%);
   background-color: white;
-  border: none;
+  border: 2px solid black;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -90,4 +90,5 @@
 
 .scroll-button:hover {
   background-color: #ffb933;
+  border: 2px solid #ffb933 !important;
 }
