--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,6 +1,6 @@
 footer {
   background-color: #f5f5f5;
-  padding: 2.5em 1.25em;
+  padding: 2.5em 0em 0em 0em;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
