--- a/src/style/SearchForm.css
+++ b/src/style/SearchForm.css
@@ -11,7 +11,7 @@
 }
 
 .zindex-minus{
-  z-index: -1;
+  z-index: -2 !important;
 }
 
 
@@ -52,6 +52,10 @@
   flex-direction: column;
   opacity: 0;
   animation: fadeIn 1s 1.5s forwards, slideInFromLeft 1s 1.5s forwards;
+}
+
+.zindex_-1{
+  z-index: -1 !important;
 }
 
 .input-group input {
